--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,16 @@
       <artifactId>spring-context</artifactId>
       <version>5.0.8.RELEASE</version>
 	</dependency>	
+	<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+	<dependency>
+	    <groupId>javax.annotation</groupId>
+	    <artifactId>javax.annotation-api</artifactId>
+	    <version>1.3.2</version>
+	</dependency>
   </dependencies>
+  	<properties>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+	</properties>
+	
 </project>
